[gd_scene load_steps=6 format=3 uid="uid://c37egpepk78y2"]

[ext_resource type="Script" path="res://script/employee_store.gd" id="1_lcorx"]
[ext_resource type="Texture2D" uid="uid://bk6sf1hj6oq5l" path="res://asset/background/store_1.png" id="2_hobv2"]
[ext_resource type="Texture2D" uid="uid://canxihhafwe05" path="res://asset/background/store_2.png" id="3_8n2sp"]
[ext_resource type="PackedScene" uid="uid://gs525m4r8f4r" path="res://scene/dynamic_text_box.tscn" id="4_6srie"]
[ext_resource type="PackedScene" uid="uid://dbu88awi58qi2" path="res://scene/store_item.tscn" id="5_epf2n"]

[node name="EmployeeStore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lcorx")

[node name="Background_1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hobv2")

[node name="Background_2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8n2sp")

[node name="ItemDescription" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 500.0

[node name="ColorRect" type="ColorRect" parent="ItemDescription"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.419813, 0.419813, 0.419813, 1)

[node name="ItemLabel" type="RichTextLabel" parent="ItemDescription"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center][font_size=100]Example Item[/font_size][/center]
This item, is in fact an item"
fit_content = true

[node name="DynamicTextBox" parent="." instance=ExtResource("4_6srie")]
layout_mode = 1

[node name="StoreItems" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StoreItem" parent="StoreItems" instance=ExtResource("5_epf2n")]
layout_mode = 1
offset_left = 512.0
offset_top = 193.0
offset_right = 984.0
offset_bottom = 665.0
scale = Vector2(0.256253, 0.256253)
description = "It's up!"
item_name = "Upper Pepper"

[node name="StoreItem2" parent="StoreItems" instance=ExtResource("5_epf2n")]
layout_mode = 1
offset_left = 555.0
offset_top = 446.0
offset_right = 1027.0
offset_bottom = 918.0
scale = Vector2(0.256253, 0.256253)
description = "It's low"
item_name = "Lower Pepper"

[node name="StoreItem3" parent="StoreItems" instance=ExtResource("5_epf2n")]
layout_mode = 1
offset_left = 870.0
offset_top = 397.0
offset_right = 1342.0
offset_bottom = 869.0
scale = Vector2(0.226222, 0.0843427)
description = "It's quite flat"
item_name = "Flat Pepper"
